# bot

./: .dockerignore  Dockerfile  README.md  entrypoint.sh  fonts.conf  pyproject.toml  requirements.txt  screenshot.py  server.py
.github/workflows/: main.yml
static/: sprites-large.css  sprites.css
views/: material.html
